TPBE-6147-fix-bonus-code-z-index

--- a/assets/styles/components/bonus/deposit-code.scss
+++ b/assets/styles/components/bonus/deposit-code.scss
@@ -4,6 +4,7 @@
   border-radius: 8px;
   border: 2px solid transparent;
   overflow: hidden;
+  z-index: 1;
 
   &__head {
     position: relative;
